# LollysLotto

./: .gitignore  Anchor.toml  Cargo.toml  Makefile.toml  lollys-lotto.ts  package-lock.json  package.json
app/: .solitarc.js  package-lock.json  package.json  package.jsonss
app/.crates/: .crates2.json
app/idl/: lollys_lotto.json
app/src/: constants.ts  index.ts  utils.ts
app/src/admin/: createEventEmitter.ts  createLolysLotto.ts  startLottoGame.ts
app/src/cranks/: crankLottoGameClosed.ts  crankLottoGameWinners.ts  crankTransferWinningAmountToUserRewardsVault.ts
app/src/switchboard/: processWinningNumbers.ts
app/src/user/: buyTicket.ts  claimUserRewards.ts  createUserMetadata.ts
app/tests/: printLottoGames.ts  printLottoTickets.ts
app/tests/testLottoGameAccounts/: lotto_game_round_1.json  lotto_game_round_3.json
localnet/: Cargo.toml
localnet/src/: lib.rs  traits.rs
localnet/src/mints/: lolly.rs  mod.rs  usdc.rs
localnet/src/state/: event_emitter.rs  mod.rs  user_metadata.rs
localnet/src/user_accounts/: mod.rs  not_admin.rs  test_admin.rs  test_admin_2.rs  test_user.rs
localnet/tests/: positive_cases.rs
localnet/tests/utils/: mod.rs  test_state.rs
lollys-lotto-rust-sdk/: Cargo.toml
lollys-lotto-rust-sdk/src/: constants.rs  error.rs  lib.rs  utils.rs
lollys-lotto-rust-sdk/src/instructions/: burn_lolly.rs  buy_lotto_ticket.rs  close_event_emitter.rs  close_lollys_lotto.rs  close_lotto_game.rs  crank_lotto_game_winner.rs  create_event_emitter.rs  create_lolly_burn_state.rs  create_lollys_lotto.rs  create_user_metadata.rs  mod.rs  start_lotto_game.rs  swap_usdc_lolly.rs  test_emit_winning_numbers.rs
lollys-lotto-rust-sdk/src/instructions/admin/: burn_lolly.rs  close_event_emitter.rs  close_lolly_burn_state.rs  close_lollys_lotto.rs  close_lotto_game.rs  create_event_emitter.rs  create_lolly_burn_state.rs  start_lotto_game.rs  swap_usdc_lolly.rs
lollys-lotto-rust-sdk/src/instructions/cranks/: crank_lotto_game_closed.rs  crank_lotto_game_winners.rs  crank_transfer_to_buy_and_burn_vault.rs  crank_transfer_winning_amount_to_user_rewards_vault.rs
lollys-lotto-rust-sdk/src/instructions/switchboard/: mod.rs  process_winning_numbers.rs  test_emit_winning_numbers.rs
lollys-lotto-rust-sdk/src/instructions/user/: buy_lotto_ticket.rs  claim_user_rewards.rs  close_lotto_ticket.rs  close_user_metadata.rs  create_user_metadata.rs  mod.rs
lollys-lotto-rust-sdk/src/pda/: events.rs  lolly_burn_state.rs  lollys_lotto.rs  lotto_game.rs  lotto_ticket.rs  mod.rs  user_metadata.rs
lollys-lotto-rust-sdk/src/state/: events.rs  lolly_burn_state.rs  lollys_lotto.rs  lotto_game.rs  lotto_ticket.rs  mod.rs  user_metadata.rs
lollys-lotto-ts-sdk/: package-lock.json  package.json
lollys-lotto-ts-sdk/src/codegen/: programId.ts
lollys-lotto-ts-sdk/src/codegen/accounts/: LottoGame.ts  (+7 more)
lollys-lotto-ts-sdk/src/constants/: index.ts  lolly_lotto.ts  lollys_lotto.ts
lollys-lotto-ts-sdk/src/idl/: lollys_lotto.json
peripherals/monitoring/: .gitignore  Makefile.toml  README.md  docker-compose.yaml  env.local
peripherals/monitoring/migrations/: 0_init.sql
peripherals/monitoring/program_event_monitor/: Cargo.toml
peripherals/monitoring/program_event_monitor/src/: address_calculator.rs  event_log_sub.rs  lib.rs  log_parsing.rs
peripherals/monitoring/program_event_monitor/src/account_polling/: mod.rs  oracle_price_history.rs
peripherals/monitoring/program_event_monitor/src/event_backfilling/: backfiller.rs  mod.rs
peripherals/monitoring/program_event_monitor/src/event_processing/: claim_fees.rs  close_liquidity_account.rs  create_liquidity_account.rs  deposit_and_withdraw.rs  internal_swap_event.rs  mod.rs  shared_processing.rs  swap_event.rs
peripherals/monitoring/program_event_monitor/src/prom_metrics/: metrics.rs
peripherals/monitoring/program_monitor_db/: Cargo.toml
peripherals/monitoring/program_monitor_db/src/: error.rs  lib.rs
peripherals/monitoring/program_monitor_db/src/database/: mod.rs  query_types.rs
peripherals/monitoring/program_monitor_db/src/database/data_types/: failed_program_events.rs  fee_vault_activity.rs  fee_vault_info.rs  internal_swap_activity.rs  liquidity_account_activity.rs  liquidity_account_info.rs  lotto_game_vault_activity.rs  lotto_game_vault_info.rs  lp_deposit_activity.rs  mod.rs  oracle_price_history_info.rs  oracle_prices.rs  pair_activity.rs  pair_info.rs  pool_vault_activity.rs  pool_vault_info.rs  program_events.rs  swap_activity.rs
peripherals/monitoring/program_monitor_db/src/utils/: mod.rs  test_helpers.rs  type_conversions.rs
programs/lollys-lotto/: Cargo.toml
programs/lollys-lotto/src/: constants.rs  errors.rs  lib.rs  pda_identifier.rs
programs/lollys-lotto/src/instructions/: burn_lolly.rs  buy_lotto_ticket.rs  claim_user_rewards.rs  close_event_emitter.rs  close_lollys_lotto.rs  close_lotto_game.rs  crank_lotto_game_winner.rs  create_event_emitter.rs  create_lolly_burn_state.rs  create_lollys_lotto.rs  create_user_metadata.rs  mod.rs  start_lotto_game.rs  swap_usdc_lolly.rs
programs/lollys-lotto/src/instructions/admin/: burn_lolly.rs  close_event_emitter.rs  close_lolly_burn_state.rs  close_lollys_lotto.rs  close_lotto_game.rs  create_lolly_burn_state.rs  create_lollys_lotto.rs  mod.rs  start_lotto_game.rs  swap_usdc_lolly.rs
programs/lollys-lotto/src/instructions/cranks/: crank_lotto_game_closed.rs  crank_lotto_game_winners.rs  crank_transfer_to_buy_and_burn_vault.rs  crank_transfer_winning_amount_to_user_rewards_vault.rs  mod.rs
programs/lollys-lotto/src/instructions/switchboard/: mod.rs  process_winning_numbers.rs  request_winning_numbers.rs  request_winning_numbers_v2.rs  test_emit_winning_numbers.rs
programs/lollys-lotto/src/instructions/user/: buy_lotto_ticket.rs  claim_user_rewards.rs  close_lotto_ticket.rs  close_user_metadata.rs  create_user_metadata.rs
programs/lollys-lotto/src/state/: events.rs  lolly_burn_state.rs  lollys_lotto.rs  lotto_game.rs  lotto_ticket.rs  user_metadata.rs
programs/lollys-lotto/src/utils/: lollys_num.rs  mod.rs  switchboard.rs
tests/: lollys-lotto.ts
(+64 files in other folders)
