[workspace]
members = [
    "programs/*",
    "peripherals/monitoring/program_monitor_db",
    "peripherals/monitoring/program_event_monitor",
    "lollys-lotto-rust-sdk",
    "localnet",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anchor-spl = {version = "0.29.0", default-features = false, features = ["mint", "token", "associated_token"] }
anyhow = "1"
async-trait = "0.1.74"
base64 = "0.21"
bytemuck = "1.13"
chrono = "0.4.26"
clap = { version = "3", features = [ "derive", "env" ] }
csv = "1.2.2"
env_logger = "0.10.1"
futures = "0.3.29"
futures-util = "0.3.29"
hyper = { version = "0.14", features = ["server", "http2"] }
lazy_static = "1.4.0"
log = "0.4.20"
num-traits = "0.2"
once_cell = "1"
prometheus = "0.13"
regex = "1"
rust_decimal = { version = "1", features = ["maths", "c-repr"] }
solana-program = "=1.17"
switchboard-solana = "0.29.99"
switchboard-v2 = "0.4.0"
solana-randomness-service = { version = "1.0.2", features = ["cpi"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = "1.17"
solana-sdk = "1.17"
solana-transaction-status = "1.17"
spl-associated-token-account = "2"
spl-token = { version = "4", features = ["no-entrypoint"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "decimal", "chrono"] }
toml_edit = "=0.21.0"
thiserror = "1.0.40"
tokio = { version = "1", features = ["macros"] }



program_monitor_db = { path = "peripherals/monitoring/program_monitor_db" }
lollys-lotto = { path = "programs/lollys-lotto", features = ["no-entrypoint"] }
lollys-lotto-rust-sdk = { path = "./lollys-lotto-rust-sdk" }
solana-devtools-localnet = { git = "https://github.com/ebrightfield/solana-devtools" }
solana-devtools-tx = { git = "https://github.com/ebrightfield/solana-devtools" }
