[package]
name = "lollys-lotto-rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = {workspace = true}
anchor-spl =  {workspace = true}
solana-sdk =  {workspace = true}
solana-program =  {workspace = true}
thiserror = {workspace = true}

lollys-lotto = {path = "../programs/lollys-lotto"}