[package]
name = "lollys-lotto"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lollys_lotto"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
debug-msg = []

[dependencies]
anchor-lang = {workspace = true}
anchor-spl = "0.29.0"
solana-program = {workspace = true}
toml_edit = "=0.21.0"
switchboard-solana = "0.29.99"
solana-randomness-service = { version = "1.0.2", features = ["cpi"] }
num-traits = "0.2"
