[package]
name = "lollys-lotto"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lollys_lotto"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
debug-msg = []

[dependencies]
anchor-lang = {workspace = true}
anchor-spl = {workspace = true}
bytemuck = { workspace = true }
num-traits = {workspace = true}
rust_decimal = {workspace = true}
solana-program = {workspace = true}
solana-randomness-service = {workspace = true}
switchboard-solana = {workspace = true}
# solana-address-lookup-table-program = {workspace = true}
# switchboard-on-demand = {workspace = true}
toml_edit = {workspace = true}
