[package]
name = "program_monitor_db"
version = "0.1.0"
edition = "2021"


[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
solana-sdk = { workspace = true }
num-traits = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
lollys-lotto = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
